Change section about me

--- a/index.html
+++ b/index.html
@@ -44,30 +44,33 @@
 
         <section class="section section-biography">
             <h2 data-language="about" class="text-center mb-2">About me</h2>
-            <p data-language="aboutContent" class="text-justify">
+            <p data-language="aboutContent" class="text-left">
                 Hi! my name is <strong>Henry Zarza</strong>, I'm student of tenth semester of computer engineering 
                 at Politéctico Colombiano Jaime Isaza Cadavid, web developer and student of languages. I live in Medellín,
-                Colombia. I love the programming, algorithms, the languages, the music, the series, read, yoga and walking. <br />
+                Colombia. I love the programming, algorithms, languages, music, series, read, practice yoga and walk. <br />
                 I like the web development because I consider that's a space where I can exploit and let fly my creativity
                 and imagination. My favorite programming language is <strong>JavaScript</strong>, in my opinion it's very
                 flexible, robust and has great projection so it lends itself to work in many fields of computer science.
             </p>
-            <button class="btn btn-ouline-info btn-social"> <span data-language="btnSocial">Meet me in</span>
-                <a class="btn" target="_blank" href="https://github.com/henryzarza" title="GitHub">
-                    <i class="fa fa-github" aria-hidden="true"></i>
-                </a>
-                <a class="btn" target="_blank" href="https://twitter.com/henry_zarza" title="Twitter">
-                    <i class="fa fa-twitter" aria-hidden="true"></i>
-                </a>
-                <a class="btn" target="_blank" href="https://codepen.io/HenryZarza/" title="CodePen">
-                    <i class="fa fa-codepen" aria-hidden="true"></i>
-                </a>
-                <a class="btn" href="mailto:henryacz7@gmail.com" title="Gmail">
-                    <i class="fa fa-google" aria-hidden="true"></i>
-                </a>
-                <a class="btn" target="_blank" href="https://www.linkedin.com/in/henry-alejandro-cano-zarza-1b167b145" title="LinkedIn">
-                    <i class="fa fa-linkedin-square" aria-hidden="true"></i>
-                </a>
+            <button class="btn btn__social">
+                <div class="btn-content-hide" data-language="btnSocial">Meet me in</div>
+                <div class="btn-links-inside">
+                    <a class="btn-links-inside__item" target="_blank" href="https://github.com/henryzarza" title="GitHub">
+                        <i class="fa fa-github" aria-hidden="true"></i>
+                    </a>
+                    <a class="btn-links-inside__item" target="_blank" href="https://twitter.com/henry_zarza" title="Twitter">
+                        <i class="fa fa-twitter" aria-hidden="true"></i>
+                    </a>
+                    <a class="btn-links-inside__item" target="_blank" href="https://codepen.io/HenryZarza/" title="CodePen">
+                        <i class="fa fa-codepen" aria-hidden="true"></i>
+                    </a>
+                    <a class="btn-links-inside__item" href="mailto:henryacz7@gmail.com" title="Gmail">
+                        <i class="fa fa-google" aria-hidden="true"></i>
+                    </a>
+                    <a class="btn-links-inside__item" target="_blank" href="https://www.linkedin.com/in/henry-alejandro-cano-zarza-1b167b145" title="LinkedIn">
+                        <i class="fa fa-linkedin-square" aria-hidden="true"></i>
+                    </a>
+                </div>
             </button>
         </section>
 
@@ -126,7 +129,7 @@
 
         <section class="section section-people">
             <h2 class="text-center mb-2" data-language="titlePeople">People</h2>
-            <p class="text-justify mb-3" data-language="contentPeople">
+            <p class="text-left mb-3" data-language="contentPeople">
                 These persons have done a very positive impact in my life, teaching me that
                 for more complicated than sees the life and the things, always with effort,
                 dedication, humility and believing in one itself there is nothing that could not be achieved.
