Elimination of Bootstrap's dependence

--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
         <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
         <link rel="icon" href="img/favicon.ico" type="image/x-icon">
 
-        <!-- Styles -->
-        <!-- <link rel="stylesheet" href="./css/bootstrap.min.css"> -->
+        <!-- Style -->
         <link rel="stylesheet" href="./css/styles.css">
 
         <!-- Font Awesome -->
@@ -129,45 +128,45 @@
 
         <section class="section section-people">
             <h2 class="text-center mb-2" data-language="titlePeople">People</h2>
-            <p class="text-left mb-3" data-language="contentPeople">
+            <p class="text-left mb-2" data-language="contentPeople">
                 These persons have done a very positive impact in my life, teaching me that
                 for more complicated than sees the life and the things, always with effort,
                 dedication, humility and believing in one itself there is nothing that could not be achieved.
             </p>
-            <div class="row">
-                <div class="col-12 col-sm-4 mb-3">
+            <div class="container-people">
+                <div>
                     <img class="img-fluid img-people" src="./img/people/alberteinstein.jpg" alt="Albert Einstein">
-                    <h6 class="font-weight-bold text-center">Albert Einstein</h6>
+                    <h6 class="container-people__name text-center">Albert Einstein</h6>
                 </div>
-                <div class="col-12 col-sm-4 mb-3">
+                <div>
                     <img class="img-fluid img-people" src="./img/people/ladygaga.jpg" alt="Lady Gaga">
-                    <h6 class="font-weight-bold text-center">Lady Gaga</h6>
+                    <h6 class="container-people__name text-center">Lady Gaga</h6>
                 </div>
-                <div class="col-12 col-sm-4 mb-3">
+                <div>
                     <img class="img-fluid img-people" src="./img/people/alanturing.jpg" alt="Alan Turing">
-                    <h6 class="font-weight-bold text-center">Alan Turing</h6>
+                    <h6 class="container-people__name text-center">Alan Turing</h6>
                 </div>
-                <div class="col-12 col-sm-4 mb-3">
+                <div>
                     <img class="img-fluid img-people" src="./img/people/nelsonmandela.jpg" alt="Nelson Mandela">
-                    <h6 class="font-weight-bold text-center">Nelson Mandela</h6>
+                    <h6 class="container-people__name text-center">Nelson Mandela</h6>
                 </div>
-                <div class="col-12 col-sm-4 mb-3">
+                <div>
                     <img class="img-fluid img-people" src="./img/people/marylou.jpeg" alt="Mary Lou">
-                    <h6 class="font-weight-bold text-center">Mary Lou</h6>
+                    <h6 class="container-people__name text-center">Mary Lou</h6>
                 </div>
-                <div class="col-12 col-sm-4 mb-3">
+                <div>
                     <img class="img-fluid img-people" src="./img/people/johnsteinbeck.jpg" alt="John Steinbeck">
-                    <h6 class="font-weight-bold text-center">John Steinbeck</h6>
+                    <h6 class="container-people__name text-center">John Steinbeck</h6>
                 </div>
             </div>
         </section>
 
         <section class="section section-footer text-center" data-language="contentPhrases">
-            Nobody hopes that you know everything, only amuse yourself and never stop learning. <br>
+            Nobody hopes that you know everything, only amuse yourself and never stop learning. <br />
             The real growth comes when we leave our zone of comfort.
         </section>
 
-        <script src="./js/canvas.js"></script>
+        <!-- <script src="./js/canvas.js"></script> -->
         <script src="./js/main.js"></script>
         
     </body>
