Finalization of general changes

--- a/index.html
+++ b/index.html
@@ -74,56 +74,31 @@
         </section>
 
         <section class="section section-skill">
-            <h2 class="text-center title-skill" data-language="titleKnowledge">Knowledge</h2>
-            <div class="row">
-                <div class="col-12 col-sm-6 mb-swatch">
-                    <ul class="swatch" id="swatch-0">
-                        <li class="swatch-item" data-color="#9b4f96">C#</li>
-                        <li class="swatch-item" data-color="#183052">Less</li>
-                        <li class="swatch-item" data-color="#767bb3">PHP</li>
-                        <li class="swatch-item" data-color="#2281e3">C y C++</li>
-                        <li class="swatch-item" data-color="#e33a33">Java</li>
-                        <li class="swatch-item" data-color="#cf639a">Sass</li>
-                        <li class="swatch-item" data-color="#0079cc">TypeScript</li>
-                        <li class="swatch-item" data-color="#33a9dd">CSS</li>
-                        <li class="swatch-item" data-color="#f16636">HTML</li>
-                        <li class="swatch-item text-dark" data-color="#f6e03c">JavaScript</li>
-                        <li class="swatch-item font-weight-bold" data-color="#29253e" data-language="titleSwatch0">Languages and others</li>
-                    </ul>
-                </div>
-                <div class="col-12 col-sm-6 mb-swatch">
-                    <ul class="swatch" id="swatch-1">
-                        <li class="swatch-item text-dark" data-color="#bad264">Yii 2</li>
-                        <li class="swatch-item" data-color="#f56650">Laravel</li>
-                        <li class="swatch-item text-dark" data-color="#aad8f7">Foundation</li>
-                        <li class="swatch-item" data-color="#d36e73">Materialize</li>
-                        <li class="swatch-item" data-color="#172c45">jQuery</li>
-                        <li class="swatch-item" data-color="#b52e31">Angularjs</li>
-                        <li class="swatch-item" data-color="#61488a">Bootstrap</li>
-                        <li class="swatch-item" data-color="#e23a37">Angular</li>
-                        <li class="swatch-item font-weight-bold" data-color="#29253e" data-language="titleSwatch1">Frameworks and libraries</li>
-                    </ul>
-                </div>
-                <div class="col-12 col-sm-6 mb-swatch">
-                    <ul class="swatch" id="swatch-2">
-                        <li class="swatch-item" data-color="#e38f34">MySQL</li>
-                        <li class="swatch-item" data-color="#020202">SQL Server</li>
-                        <li class="swatch-item" data-color="#e33a33">Oracle</li>
-                        <li class="swatch-item" data-color="#316192">PostgreSQL</li>
-                        <li class="swatch-item font-weight-bold" data-color="#29253e" data-language="titleSwatch2">Data Base</li>
-                    </ul>
-                </div>
-                <div class="col-12 col-sm-6 mb-swatch">
-                    <ul class="swatch" id="swatch-3">
-                        <li class="swatch-item" data-color="#3974a5">Python</li>
-                        <li class="swatch-item" data-color="#ef568f">RxJS</li>
-                        <li class="swatch-item text-dark" data-color="#61dafb">Reactjs</li>
-                        <li class="swatch-item" data-color="#8e714e">MongoDB</li>
-                        <li class="swatch-item" data-color="#649e58">Nodejs</li>
-                        <li class="swatch-item font-weight-bold" data-color="#29253e" data-language="titleSwatch3">Learning</li>
-                    </ul>
-                </div>
-            </div>
+            <ul class="skills">
+                <li class="skills__item--principal text-white" id="js-toggleSkill">Skills</li>
+                <li class="skills__item" data-position="22.5rem" data-color="#9b4f96">C#</li>
+                <li class="skills__item" data-position="1.2rem" data-color="#183052">Less</li>
+                <li class="skills__item" data-position="9.5rem" data-color="#767bb3">PHP</li>
+                <li class="skills__item" data-position="4.5rem" data-color="#cf639a">Sass</li>
+                <li class="skills__item" data-position="19rem" data-color="#0079cc">TypeScript</li>
+                <li class="skills__item" data-position="13rem" data-color="#33a9dd">CSS</li>
+                <li class="skills__item" data-position="7rem" data-color="#f16636">HTML</li>
+                <li class="skills__item" data-position="15rem" data-color="#f6e03c">JavaScript</li>
+                <li class="skills__item" data-position="0rem" data-color="#f56650">Laravel</li>
+                <li class="skills__item" data-position="3.5rem" data-color="#61488a">Bootstrap</li>
+                <li class="skills__item" data-position="22rem" data-color="#e23a37">Angular</li>
+                <li class="skills__item" data-position="8.2rem" data-color="#e38f34">MySQL</li>
+                <li class="skills__item" data-position="17.2rem" data-color="#020202">SQL Server</li>
+                <li class="skills__item" data-position="14rem" data-color="#e33a33">Oracle</li>
+                <li class="skills__item" data-position="10.5rem" data-color="#316192">PostgreSQL</li>
+                <li class="skills__item" data-position="6.3rem" data-color="#8e714e">MongoDB</li>
+                <li class="skills__item" data-position="20.4rem" data-color="#61dafb">Reactjs</li>
+                <li class="skills__item" data-position="0.7rem" data-color="#649e58">Nodejs</li>
+                <li class="skills__item" data-position="4.2rem" data-color="#e33a33">Java</li>
+                <li class="skills__item" data-position="11.5rem" data-color="#aad8f7">Foundation</li>
+                <li class="skills__item" data-position="15.3rem" data-color="#d36e73">Materialize</li>
+                <li class="skills__item" data-position="6.5rem" data-color="#172c45">jQuery</li>
+            </ul>
         </section>
 
         <section class="section section-people">
@@ -166,7 +141,7 @@
             The real growth comes when we leave our zone of comfort.
         </section>
 
-        <!-- <script src="./js/canvas.js"></script> -->
+        <script src="./js/canvas.js"></script>
         <script src="./js/main.js"></script>
         
     </body>
